# tmp_slow_ci

./: README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml
