[project]
name = "tmp-slow-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.6.3",
  "pytest >=8.3.2",
  "pandas >=2.0.0",
  "fastparquet>=2024.11.0",
  "pydantic >=1.10.0",
  "onnx>=1.10.1",
]